GNU SASL NEWS -- History of user-visible changes.
Copyright (C) 2002-2012 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.8.1 (unreleased) [stable]

** GSSAPI client: Now retrieves GSASL_AUTHZID for authorization identity.
** GSSAPI client: Can now transmit an empty/missing authorization identity.
Before the GSSAPI client retrieved GSASL_AUTHID (authentication
identity) and used that as the authorization identity.  For backwards
compatibility, the code now first tries GSASL_AUTHZID and then
GSASL_AUTHID when discovering the authorization identity.  If you
don't want any authorization identity (and thus let the server fall
back on the identity implied from the Kerberos layer) then return
GSASL_NO_CALLBACK on both.  The backwards compatibility code will be
removed after the year 2012 so please update code to use GSASL_AUTHZID
instead of GSASL_AUTHID.  Reported by Amon Ott.

** i18n: Updated translations.

* Version 1.8.0 (released 2012-05-28) [stable]

** This is a new major stable release.  Brief changes compared to 1.6.x:

*** SAML20 support following RFC 6595.

*** OPENID20 support following RFC 6616.

*** Added SMTP server examples (for e.g., SCRAM, SAML20, OPENID20).

*** Various cleanups, portability and other bug fixes.
See the NEWS entries during the 1.7.x branch for details.

* Version 1.7.6 (released 2012-05-23) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.5 (released 2012-05-22) [beta]

** i18n: Updated translations.

** Build fixes.

* Version 1.7.4 (released 2012-05-16) [alpha]

** Doc fixes and updates for the callback/property change in the library.
See lib/NEWS for details.  This affects SAML and OpenID.

** Slight fixes to Windows build script.

* Version 1.7.3 (released 2012-04-03) [alpha]
